--- a/StockRank/StockRank/Base.lproj/Main.storyboard
+++ b/StockRank/StockRank/Base.lproj/Main.storyboard
@@ -103,6 +103,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="i8I-Ij-uWa" secondAttribute="bottom" id="u34-jD-kkt"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="i8I-Ij-uWa" id="KeM-jH-bAx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
